[START] home page

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<!-- <html>
 <header>
     <link rel="stylesheet" href="./index.scss" />
 </header>
@@ -6,16 +6,75 @@
 <body>
     <script src="./index.js"></script>
     <section class="section-home">
-        <class class="landing">
-            <class class="landing-text">
-                <h1 class="site-title">
+        <div id="fullpage">
+            <button class="github"> Github<i class="fab fa-github"></i></button>
+            <div class="section" id="section0">
+              <div class="landing">
+                <div class="landing-text">
+                  <h1 class="site-title">
                     App Store
                     Find the apps you love.
                     And the ones you’re about to.
-                </h1>
-            </class>
-        </class>
+                  </h1>
+                </div>
+                <div class="selector-div"></div>
+              </div>
+              <p class="scrolling-title">Scroll to continue</p>
+              <div class="buttons">
+                <div class="button discover-button"></div>
+              </div>
+            </div>
     </section>
 </body>
+</html> -->
 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <head>
+      <title>Resume Martins Thomas</title>
+      <meta name="description" content="Resume Martins Thomas">
+      <meta name="keywords" content="Resume Martins Thomas">
+      <meta name="author" content="Resume">
+      <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+      <meta property="og:image" content="">
+      <link href="https://fonts.googleapis.com/css?family=Happy+Monkey" rel="stylesheet">
+      <link rel="stylesheet" href="./index.scss">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+      <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.extensions.min.js"></script>
+    </head>
+  </head>
+  <body>
+     <div id="fullpage">
+      <div class="section" id="section0">
+        <div class="display_image_top_corner"> </div>
+        <div class="display_image_bottom_corner"> </div>
+        <div class="landing">
+          <div class="landing-text">
+            <h1 class="site-title">
+                Thomas Martins. <br/>
+                (iOS, Swift) -> <br/> lover, developer and supporter. <br/>
+              <div class="contact-home"><a href="https://github.com/Mthomas3/NEO-iOS" target="_blank">Github<i class="fab fa-github"></i></a><a href="https://twitter.com/_thomasMartins_" target="_blank">Twitter<i class="fab fa-twitter"></i></a><a href="mailto:thomas.martins@epitech.eu">Email<i class="fas fa-envelope"></i></a></div>
+            </h1>
+          </div>
+          
+          <div class="selector-div"></div>
+        </div>
+        <p class="scrolling-title">Scroll to continue</p>
+        <div class="buttons">
+          <div class="button discover-button"></div>
+        </div>
+      </div>
+      <div class="section" id="section1">
+      
+      </div>
+      <div class="section" id="section2">
+      </div>
+    </div>
+  </body>
 </html>
+<script type="text/javascript" src="./index.js"></script>
+
+
