--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <div class="landing-text">
             <h1 class="site-title">
                 Thomas Martins. <br/>
-                (iOS, Swift) -> <br/> lover, developer and supporter. <br/>
+                (Swift) lover, developer <br/> and supporter. <br/>
               <div class="contact-home"><a href="https://github.com/Mthomas3/NEO-iOS" target="_blank">Github<i class="fab fa-github"></i></a><a href="https://twitter.com/_thomasMartins_" target="_blank">Twitter<i class="fab fa-twitter"></i></a><a href="mailto:thomas.martins@epitech.eu">Email<i class="fas fa-envelope"></i></a></div>
             </h1>
           </div>
