--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
     </head>
   </head>
   <body>
+    <ul class="navigation">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul>
      <div id="fullpage">
       <div class="section" id="section0">
         <div class="display_image_top_corner"> </div>
@@ -38,6 +44,8 @@
         </div>
       </div>
       <div class="section" id="section1">
+
+        <p> yo </p>
         
       </div>
       <div class="section" id="section2">
