--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
             <img src="images/home.svg" style="width:45px;height:45px;">
             <div class="text-title">
               <h2> Mobile App Architecture </h2>
-              <p> Years of building different iOS applications helped me to develop strong skills in app architecture.
+              <p> Years of building applications helps me to discovers different kind of architectures. 
+                I really love clean architecture, I have been developing app using MVC, MVP, MVVM and clean architecture. 
+                I have a good idea of how VIPER works. I am also a big fan of RxSwift, to help write better and cleaner code. 
                   </p>
             </div>
             <div class="text-languages">
