--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
               <div class="text-languages">
                 <h2> Languages I know: </h2>
-                <p> Swift, Kotlin, Kotlin Mutliplatform </p>  
+                <p> UIKit, SwiftUI, Swift, Kotlin, Kotlin Mutliplatform </p>  
               </div>
           </li>
           <li class="flex-item">
@@ -84,7 +84,7 @@
             </div>
               <div class="text-languages">
                 <h2> Languages I know: </h2>
-                <p> HTLM, Sass, Pug, CSS</p>
+                <p> React, Node, HTLM, Sass, Pug, CSS</p>
               </div>
           </li>
           <li class="flex-item">
@@ -92,13 +92,13 @@
             <div class="text-title">
               <h2> Mobile App Architecture </h2>
               <p> Years of building applications helps me to discovers different kind of architectures. 
-                I really love clean architecture, I have been developing app using MVC, MVP, MVVM and clean architecture. 
+                I really love clean architecture, I have been developing app using MVC, MVP, MVVM, Redux and clean architecture. 
                 I have a good idea of how VIPER works. I am also a big fan of RxSwift, to help write better and cleaner code. 
                   </p>
             </div>
             <div class="text-languages">
               <h2> Architectures I know: </h2>
-              <p> MVVM, MVC, MVP, Clean Architecture</p>
+              <p> MVVM, MVC, MVP, Redux, Clean Architecture</p>
             </div>
           </li>
         </ul>
@@ -113,7 +113,8 @@
               <h2> 🚀 CryptoMarket 🚀 </h2>
               <p>
                 I am a big fan of cryptocurrencies, so I started to develop CryptoMarket in October 2019 as a side project. 
-                The project still continues to grow and the version 2.0.0 has been released on the AppStore. 
+                The project still continues to grow and the version 2.0.7 has been released on the AppStore. At this time, more than 
+                3000+ people installed the application, 60 people rated it with 5 stars and Cryptomarket is trending on #finance in 3 countries.
                 The goal of CryptoMarket is to help you stay up to date with your favorite cryptocurrencies.
               </p>
             </div>
